# app-ly

./: .gitignore  AGENTS.md  README.md  app.toml  app.toml.example  justfile  package-lock.json  package.json
.github/workflows/: release.yml
_docs/: README.md  app-agent-guide.md  js-api.md  project-structure.md
bundle/: app.toml
example/contents/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: child-window.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: shell.toml
src-tauri/scripts/: shell-api.js  shell-shortcuts.js
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  menu.rs  paths.rs
