[package]
name = "app-ly"
version = "0.1.0"
description = "Generic Tauri shell container"
authors = ["you"]
edition = "2021"

[lib]
name = "app_ly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
rusqlite = { version = "0.32", features = ["bundled"] }
